# after-meeting

./: .gitignore  README.md  pyproject.toml
src/after_meeting/: __init__.py  __main__.py  cli.py  config.py  errors.py  models.py  pipeline.py
src/after_meeting/audio/: __init__.py  splitter.py
src/after_meeting/llm/: __init__.py  base.py  codex.py
src/after_meeting/rendering/: __init__.py  base.py  docx_renderer.py  pdf_renderer.py
src/after_meeting/speaker/: __init__.py  aligner.py  diarizer.py  embedder.py
src/after_meeting/structuring/: __init__.py  analyzer.py  merger.py  prompts.py
src/after_meeting/stt/: __init__.py  base.py  qwen3.py
tests/: test_cli.py  test_models.py  test_pipeline_chunked.py
tests/test_audio/: test_splitter.py
tests/test_llm/: test_codex.py
tests/test_rendering/: test_docx_renderer.py
tests/test_speaker/: test_aligner.py  test_diarizer.py  test_embedder.py
tests/test_structuring/: test_analyzer.py  test_merger.py  test_prompts.py
tests/test_stt/: test_qwen3.py
